# search-sessions

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SKILL.md  search-openclaw.py  search-sessions.py
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  gitleaks.yml  release.yml
benches/: search_benchmark.rs
commands/: search-sessions.md
docs/: architecture.md  benchmarks.md  claude-code-skill.md  install.md  openclaw.md
src/: main.rs
tests/: integration_tests.rs
tests/fixtures/: claude-session.jsonl  openclaw-session.jsonl  sessions-index.json
